Bug 297807 - Java 1.4.2 SR2 plug-in and later cause Mozilla to crash. r=mozilla@kaply.com, sr=darin@meer.net, a=asa@mozilla.org